force-app/main/default/objects/Escandallo__c/fields/CambioDocumentos__c.field-meta.xml
<CustomField>
    <fullName>CambioDocumentos__c</fullName>
    <description>Nro Contenedores *  Cambio Documentos X HQ</description>
    <formula>NroContenedores__c *  CambioDocumentsXHQ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Nro Contenedores *  Cambio Documentos X HQ</inlineHelpText>
    <label>Cambio Documentos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>