force-app/main/default/objects/Escandallo__c/fields/CambioDocumentsXHQ__c.field-meta.xml
<CustomField>
    <fullName>CambioDocumentsXHQ__c</fullName>
    <defaultValue>120</defaultValue>
    <label>Cambio documentos x HQ</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>