force-app/main/default/objects/Escandallo__c/fields/CertificadoOrigen__c.field-meta.xml
<CustomField>
    <fullName>CertificadoOrigen__c</fullName>
    <label>Certificado Origen</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>