force-app/main/default/objects/Escandallo__c/fields/ComisionAdministrativa__c.field-meta.xml
<CustomField>
    <fullName>ComisionAdministrativa__c</fullName>
    <label>Comisión Administrativa</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>