force-app/main/default/objects/Escandallo__c/fields/CostoFinancieroDepositoFabrica__c.field-meta.xml
<CustomField>
    <fullName>CostoFinancieroDepositoFabrica__c</fullName>
    <description>Importe Adelantado *  Plazo Fabricación /360 *  Tipo De Interés Deposito Fabrica</description>
    <formula>ImporteAdelantado__c *  PlazoFabricacion__c/360 *  TipoDeInteresDepositoFabrica__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Importe Adelantado *  Plazo Fabricación /360 *  Tipo De Interés Deposito Fabrica</inlineHelpText>
    <label>Costo Financiero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>