force-app/main/default/objects/Escandallo__c/fields/CostoFinancieroFinanciacionClientes__c.field-meta.xml
<CustomField>
    <fullName>CostoFinancieroFinanciacionClientes__c</fullName>
    <description>Costo Origen *  Plazo Pago /360 *  Tipo De Interes Financiacion Clientes</description>
    <formula>CostoOrigen__c *  PlazoPago__c/360 *  TipoDeInteresFinanciacionClient__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Costo Origen *  Plazo Pago /360 *  Tipo De Interes Financiacion Clientes</inlineHelpText>
    <label>Costo Financiero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>