force-app/main/default/objects/Escandallo__c/fields/CostoOrigen__c.field-meta.xml
<CustomField>
    <fullName>CostoOrigen__c</fullName>
    <label>Costo Origen</label>
    <summarizedField>EscandalloLineItem__c.CostoOrigen__c</summarizedField>
    <summaryForeignKey>EscandalloLineItem__c.Escandallo__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>