force-app/main/default/objects/Escandallo__c/fields/CostosImportacion__c.field-meta.xml
<CustomField>
    <fullName>CostosImportacion__c</fullName>
    <description>Gastos Bancarios + Gastos En Puerto +  Gastos Inspeccion + Otros Costos</description>
    <formula>GastosBancarios__c + GastosEnPuerto__c +  GastosInspeccion__c + OtrosCostos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gastos Bancarios + Gastos En Puerto +  Gastos Inspeccion + Otros Costos</inlineHelpText>
    <label>Costos Importación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>