force-app/main/default/objects/Escandallo__c/fields/GastosBancarios__c.field-meta.xml
<CustomField>
    <fullName>GastosBancarios__c</fullName>
    <description>Costo Financiero Deposito Fabrica +  Costo Financiero Financiación Clientes</description>
    <formula>CostoFinancieroDepositoFabrica__c +  CostoFinancieroFinanciacionClientes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Costo Financiero Deposito Fabrica +  Costo Financiero Financiación Clientes</inlineHelpText>
    <label>Gastos Bancarios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>