force-app/main/default/objects/Escandallo__c/fields/GastosEnPuerto__c.field-meta.xml
<CustomField>
    <fullName>GastosEnPuerto__c</fullName>
    <description>Cambio Documentos +  Certificado Origen</description>
    <formula>CambioDocumentos__c +  CertificadoOrigen__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cambio Documentos +  Certificado Origen</inlineHelpText>
    <label>Gastos en Puerto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>