force-app/main/default/objects/Escandallo__c/fields/GastosInspeccion__c.field-meta.xml
<CustomField>
    <fullName>GastosInspeccion__c</fullName>
    <description>Inspección X Entrega *  Nro. Inspecciones</description>
    <formula>InspeccionXEntrega__c *  NroInspecciones__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Inspección X Entrega *  Nro. Inspecciones</inlineHelpText>
    <label>Gastos Inspección</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>