force-app/main/default/objects/Escandallo__c/fields/ImporteAdelantado__c.field-meta.xml
<CustomField>
    <fullName>ImporteAdelantado__c</fullName>
    <description>Costo Origen *  Porcentaje Deposito A Fabrica</description>
    <formula>CostoOrigen__c *  PorcentajeDepositoAFabrica__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Costo Origen *  Porcentaje Deposito A Fabrica</inlineHelpText>
    <label>Importe adelantado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>