force-app/main/default/objects/Escandallo__c/fields/InspeccionXEntrega__c.field-meta.xml
<CustomField>
    <fullName>InspeccionXEntrega__c</fullName>
    <defaultValue>500</defaultValue>
    <label>Inspección x entrega</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>