force-app/main/default/objects/Escandallo__c/fields/NroContenedores__c.field-meta.xml
<CustomField>
    <fullName>NroContenedores__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Nº Contenedores</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>