force-app/main/default/objects/Escandallo__c/fields/NroEntregas__c.field-meta.xml
<CustomField>
    <fullName>NroEntregas__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Nº Entregas</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>