force-app/main/default/objects/Escandallo__c/fields/OtrosCostos__c.field-meta.xml
<CustomField>
    <fullName>OtrosCostos__c</fullName>
    <description>Muestras +  Comisión Administrativa</description>
    <formula>Muestras__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Muestras +  Comisión Administrativa</inlineHelpText>
    <label>Otros Costos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>