force-app/main/default/objects/Escandallo__c/fields/PlazoFabricacion__c.field-meta.xml
<CustomField>
    <fullName>PlazoFabricacion__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Plazo fabricación</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>