force-app/main/default/objects/Escandallo__c/fields/PlazoPago__c.field-meta.xml
<CustomField>
    <fullName>PlazoPago__c</fullName>
    <defaultValue>150</defaultValue>
    <label>Plazo Pago</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>