force-app/main/default/objects/Escandallo__c/fields/PorcentajeDepositoAFabrica__c.field-meta.xml
<CustomField>
    <fullName>PorcentajeDepositoAFabrica__c</fullName>
    <defaultValue>0.3</defaultValue>
    <label>% de deposito a fabrica</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>