force-app/main/default/objects/Escandallo__c/fields/TipoDeInteresDepositoFabrica__c.field-meta.xml
<CustomField>
    <fullName>TipoDeInteresDepositoFabrica__c</fullName>
    <defaultValue>0.035</defaultValue>
    <label>Tipo de interés</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>